--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@
 
 # Local History for Visual Studio Code
 .history/
-.node_modules/
+
 
 # Built Visual Studio Code Extensions
 *.vsix
+
+# dependencies
+/node_modules
